[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bynepdf"
version = "0.1.0"
description = "A library for processing PDFs and answering queries using LayoutLM-Byne and MiniCPM"
readme = "README.md"
authors = [{ name = "Bynesoft LTD", email = "borys.nadykto@bynesoft.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "torch>=1.7.0",
    "transformers>=4.5.0",
    "Pillow>=7.0.0",
    "pytesseract>=0.3.7",
    "pdf2image>=1.14.0",
    "numpy>=1.19.0",
    "scikit-learn>=0.24.0",
    "flash_attn==2.6.3"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pytest>=6.0", "flake8>=3.9.0", "black>=21.5b1"]

[project.urls]
Homepage = "https://github.com/Bynesoft-Ltd/BynePDF"
"Bug Tracker" = "https://github.com/Bynesoft-Ltd/BynePDF/issues"

[project.scripts]
bynepdf = "bynepdf.cli:main"

[tool.setuptools]
packages = ["bynepdf"]